Added login user
