# src/app.js
@@ -1,3 +1,9 @@
+import { config } from 'dotenv';
+
+if (process.env.NODE_ENV !== 'production') {
+  config();
+}
+
 import Express, { json, urlencoded } from 'express';
 import logger from 'morgan';
 import cors from 'cors';
@@ -5,8 +11,13 @@ import helmet from 'helmet';
 
 import swagger from './routes/swagger';
 import indexRouter from './routes/index';
+import usersRouter from './routes/users';
+import authRouter from './routes/auth';
 
 const app = Express();
+
+// Database connection
+import './database';
 
 // Settings
 app.set('port', process.env.PORT || 3000);
@@ -21,5 +32,11 @@ app.use(helmet());
 // Routes
 app.use('/', swagger);
 app.use('/', indexRouter);
+app.use('/api/users', usersRouter);
+app.use('/api/auth', authRouter);
+
+app.use((req, res, next) => {
+  res.status(404).json('Not found.');
+});
 
 export default app;
