# src/models/User.js
@@ -1,0 +1,67 @@
+import { model, Schema } from 'mongoose';
+import * as bcrypt from 'bcrypt';
+
+const userSchema = new Schema({
+  firstName: {
+    type: String,
+    required: true,
+  },
+  lastName: {
+    type: String,
+    required: true,
+  },
+  birthdate: {
+    type: Date,
+    required: true,
+  },
+  username: {
+    type: String,
+    required: true,
+    unique: true,
+    lowercase: true,
+    trim: true,
+  },
+  password: {
+    type: String,
+    required: true,
+  },
+  email: {
+    type: String,
+    required: true,
+    unique: true,
+    lowercase: true,
+    trim: true,
+  },
+  avatar: { type: String },
+  banner: { type: String },
+  biography: { type: String },
+  location: { type: String },
+  website: { type: String },
+  tweets: [
+    {
+      type: Schema.Types.ObjectId,
+      ref: 'Tweet',
+    },
+  ],
+});
+
+userSchema.pre('save', async function (next) {
+  const user = this;
+  if (!user.isModified('password')) return next();
+
+  try {
+    const salt = await bcrypt.genSalt(10);
+    const hash = await bcrypt.hash(user.password, salt);
+    user.password = hash;
+    next();
+  } catch (error) {
+    console.error(error);
+    next(error);
+  }
+});
+
+userSchema.methods.comparePassword = async function (password) {
+  return await bcrypt.compare(password, this.password);
+};
+
+export default model('User', userSchema);
